rfkill: watch and set NetworkManager wwan-enabled

USB modems don't expose an rfkill device at the kernel layer,
so we need to go through NetworkManager (which in turn goes
through ModemManager) to disable them.

https://bugzilla.gnome.org/show_bug.cgi?id=709684